# RoomPrivate

./: .gitattributes  .gitignore  .mailmap  Cargo.toml  Dockerfile  Documentation.md  LICENSE  README.md  TODO  TODO.md  package-lock.json  package.json  squarecloud.config  tsconfig.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeberg.yml  docker-image.yml  docker.yml  mirror.yml
EXPLAIN/: VERSION.md  WEBSOCKET_DOCUMENTATION.md
docs/: versions.md  websocket_documentation.md
encryption/: Cargo.toml
encryption/src/: main.rs
klee_socket/: Cargo.toml
klee_socket/src/: main.rs  models.rs  socket_handler.rs
prisma/: schema.prisma
prisma/migrations/20250108230040_buceta/: migration.sql
prisma/migrations/20250109053404_fagot/: migration.sql
prisma/migrations/20250109105248_add_access_log/: migration.sql
prisma/migrations/20250109105440_add_entropy_mark/: migration.sql
prisma/migrations/20250109105700_add_encrypted_timestamp/: migration.sql
prisma/migrations/20250109111609_separate_encrypted_fields/: migration.sql
prisma/migrations/20250109111758_nullable/: migration.sql
public/: app.js  index.html  info.json  styles.css
public/favicon/: site.webmanifest
public/js/: accessLogger.js  app.js  chat.js  crypto.js  info.json  main.js  markdown.js  room.js  sidebarManager.js  ui.js  utils.js  websocket.js
public/js/components/: modals.js
public/js/widgets/: ChatArea.js  RoomControls.js
public/styles/: main.css
src/: crypto.rs  files.rs  main.rs  messages.rs  room.rs  server.rs  server.ts
src/entities/: Room.ts
src/middleware/: accessLogger.ts
src/services/: PrivDB.ts  accessLogService.ts  d
src/types/: permissions.ts
src/utils/: accessLogEncryption.ts  e2eEncryption.ts  encryptionBinary.ts  logger.ts  userIdentifier.ts  wordLists.ts
