[workspace]
members = ["klee_socket"]

[package]
name = "room"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "room"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio-tungstenite = "0.21"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
