[package]
name = "room_private"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde_json = "1.0"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
warp = { version = "0.3", features = ["tls"] }
uuid = { version = "1.6", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
async-trait = "0.1"
rustls = "0.21"
rustls-pemfile = "1.0"

[lints]
clippy.pedantic = { level = "warn", priority = -1 }
clippy.should_panic_without_expect = "deny"
