[package]
name = "klee_socket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
log = "0.4.20"
env_logger = "0.10.1"
aes-gcm = "0.10.3"
base64 = "0.21.7"
chrono = "0.4.31"
dotenv = "0.15"

[[bin]]
name = "klee_socket"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "winbase"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
